--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				device.match(/symbian/i) ||
 				device.match(/HTC/i)
 			) {
-				window.location = 'https://app.funnel-preview.com/for_domain/rafelyr159ce6.clickfunnels.com/optin1691641642017';
+				window.location = 'https://fanlink.to/jmZP';
 			} else {
 				window.location = 'https://www.youtube.com/';
 			}
